[package]
name = "imgui-glfw-support"
version = "0.1.0"
authors = ["Aaron Loucks <aloucks@cofront.net>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/aloucks/imgui-glfw-support"
documentation = "https://docs.rs/imgui-glfw-support"
keywords = ["imgui", "glfw", "wgpu"]
description = "GLFW support for imgui-rs"

[dependencies]
glfw = "0.36"
imgui = "0.3"

[features]
vulkan = ["glfw/vulkan"]
image = ["glfw/image"]

[dev-dependencies]
wgpu = "0.4"
imgui-wgpu = "0.5"
imgui = "0.3"