[package]
name = "imgui-glfw-support"
version = "0.2.0"
authors = ["Aaron Loucks <aloucks@cofront.net>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/aloucks/imgui-glfw-support"
documentation = "https://docs.rs/imgui-glfw-support"
keywords = ["imgui", "glfw", "wgpu"]
description = "GLFW support for imgui-rs"

[dependencies]
glfw = "0.37"
imgui = "0.4"

[features]
vulkan = ["glfw/vulkan"]
image = ["glfw/image"]

[dev-dependencies]
wgpu = "0.5"
imgui-wgpu = "0.7"
imgui = "0.4"
futures = "0.3.4"
